# dod_raytracer

./: CMakeLists.txt  avx_utils.h  common_defs.h  config.ini  config_loader.h  cylinder.cpp  hitrecord.h  light.h  main.cpp  mesh.h  plane.cpp  sphere.cpp  sphere.h  triangle.cpp  triangle.h  utils.h
assets/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/accelerators/: kdtree.cpp  kdtree.h
src/shapes/: base_shape.h  box.cpp  box.h  cylinder.h  mesh.cpp  mesh.h  plane.cpp  plane.h  triangle.cpp  triangle.h
src/utils/: avx_utils.h  config.h  types.h  utils.h
